break too long words hard if required fixes #58

--- a/app/assets/stylesheets/all.css.scss
+++ b/app/assets/stylesheets/all.css.scss
@@ -4,6 +4,10 @@
 	margin-bottom: 1em;
 }
 
+.breaklines {
+	white-space: pre-wrap; white-space: -moz-pre-wrap; white-space: -pre-wrap; white-space: -o-pre-wrap;    word-wrap: break-word;
+}
+
 footer {
 	background-color: $dark-color;
 	color: #fff;
