--- a/app/assets/stylesheets/podcasts.css.scss
+++ b/app/assets/stylesheets/podcasts.css.scss
@@ -2,10 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.breaklines {
-	white-space: pre-wrap; white-space: -moz-pre-wrap; white-space: -pre-wrap; white-space: -o-pre-wrap;    word-wrap: break-word;
-}
-
 div.podcast {
 	margin-bottom: 2em;
 }
