--- a/app/assets/stylesheets/stream.css.scss
+++ b/app/assets/stylesheets/stream.css.scss
@@ -86,6 +86,7 @@ a:hover {
 
 h2 {
 	margin-top: 0;
+	white-space: pre-wrap; white-space: -moz-pre-wrap; white-space: -pre-wrap; white-space: -o-pre-wrap;    word-wrap: break-word;
 }
 
 #listeners-container {
